--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,12 @@ unbind +
 bind + new-window -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 unbind -
 bind - last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
+
+#Fancier status bar
+set -g status on
+set -g status-bg colour235
+set -g status-fg white
+set -g status-left '#[fg=cyan]#H'
+set -g status-right '#[fg=colour246]#(cat /proc/loadavg | cut -d" " -f1-3 | sed "s/ /, /g") #[fg=yellow]#(cat /sys/class/power_supply/BAT0/capacity)% #[fg=green]#(date "+%b %d %H:%M")'
+set -g status-left-length 20
+set -g status-right-length 40
